# kioku-mesh

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  plan.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.md
.github/workflows/: ci.yml  claude.yml  publish.yml
config/: zenohd_home.json5  zenohd_localhost.json5  zenohd_office.json5  zenohd_peer.json5.template  zenohd_repro_a.json5  zenohd_repro_b.json5
config/peers/: example_5peer.md
docs/: Spec.md  mcp-clients.ja.md  mcp-clients.md  mesh-mem-state-transitions.drawio  migration.md  mtls.md  multi-agent.ja.md  multi-agent.md  systemd-zenohd-override.example.conf  windows-setup.ja.md  windows-setup.md
docs/adr/: 0001-zenoh-rocksdb-transport.md  0002-existence-based-tombstone.md  0003-python-side-filter-before-fts5.md  0004-identity-env-and-persistent-file.md  0005-gc-project-agnostic-scope.md  0006-hub-and-spoke-mesh-topology.md  0007-sqlite-local-index-sidecar.md  0008-gc-project-aware-and-o-n.md  0009-mcp-server-instructions-protocol.md  0010-zenoh-as-source-of-truth.md  0011-rebuild-shadow-delete-reconcile.md  0012-forward-compat-extras-side-channel.md  0013-drop-tier-1-from-public-architecture.md  0014-mtls-via-csr-private-ca.md  0015-cert-enrollment-copy-paste-default.md  0016-remove-localhost-init-mode.md  0017-dual-hub-spoke-topology.md  0018-save-recall-language-agnostic-instructions-and-session-nudge.md  0018-visibility-tiered-replication.md  0019-visibility-tiered-replication.md  0020-skills-mesh-namespace.md  0021-fts5-trigram-and-supersedes-aware-search.md  0022-zenoh-agent-messaging-flow-layer.md  0023-single-repo-core-memory-messaging-layering.md  0024-rename-package-mesh-mem-to-kioku-mesh.md  0025-incremental-fts-rebuild-with-drift-guard.md  0026-supersede-suggestion-and-opt-in-auto.md  0027-importance-aware-search-ranking.md  0028-raw-observation-source-of-truth-and-derived-memory-views.md
docs/design/: 0185-messaging-mvp-design.md  issue-104-mcp-eager-load-deferred-tools.md  issue-105-proactive-save-opportunity-coverage.md  issue-109-local-backend.md  issue-112-tier1-fix-mesh-integration.md  poc-plan.md
docs/poc-reports/: SUMMARY.md  topology-2026-05-10.md
release_notes/: v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.4.0.md  v0.5.0.md
scripts/: bench_bulk_save.py  bench_tier4.py  repro_issue_8.py  run_dr_writer.sh  save_coverage.py  save_coverage_example.jsonl  smoke_5peer_mesh.py  smoke_issue_9_replication.py  spike_issue_7_phase1.py
scripts/hooks/: check-unsaved-decisions.sh  session-start.sh
scripts/migrations/: cleanup_legacy_memory_types.py
src/kioku_mesh/: __init__.py  __main__.py  backend.py  config.py  doctor.py  identity.py  keyspace.py  local_index.py  mcp_install.py  mcp_server.py  models.py  paths.py  pending_queue.py  purge.py  replication.py  store.py  tls.py  transport.py  zenohd_install.py
src/kioku_mesh/bridge/: __init__.py  message_memory.py
src/kioku_mesh/core/: _env_compat.py  config.py  identity.py  keyspace.py  models.py  paths.py  transport.py
src/kioku_mesh/memory/: backend.py  local_index.py  local_raw_store.py  pending_queue.py  purge.py  replication.py  save_lint.py  store.py  supersede.py  visibility_migration.py
src/kioku_mesh/messaging/: local_index.py  models.py  presence.py  purge.py  spool.py  tmux_adapter.py  zenoh_bridge.py
src/mesh_mem/: __init__.py  __main__.py  backend.py  config.py  doctor.py  identity.py  keyspace.py  local_index.py  mcp_install.py  mcp_server.py  models.py  paths.py  pending_queue.py  purge.py  replication.py  store.py  tls.py  transport.py
src/mesh_mem/bridge/: __init__.py  message_memory.py
src/mesh_mem/core/: __init__.py  config.py  identity.py  models.py  transport.py
src/mesh_mem/memory/: __init__.py  backend.py  local_index.py  pending_queue.py  purge.py  replication.py  store.py
src/mesh_mem/messaging/: __init__.py  keyspace.py  local_index.py  models.py  presence.py  tmux_adapter.py  zenoh_bridge.py
tests/: conftest.py  test_bridge_message_memory.py  test_cli_completion.py  test_cli_init.py  test_demo.py  test_doctor.py  test_e2e_sync.py  test_embedded_router.py  test_gc.py  test_identity.py  test_importance_ranking.py  test_keyspace.py  test_layering.py  test_local_backend.py  test_local_index.py  test_local_raw_store.py  test_mcp_cli.py  test_mcp_entry_tty.py  test_mcp_install.py  test_mcp_server.py  test_mesh_embedded_router.py  test_messaging_keyspace.py  test_messaging_mcp_tools.py  test_messaging_presence.py  test_messaging_purge.py  test_messaging_spool.py  test_messaging_tmux_adapter.py  test_messaging_zenoh_bridge.py  test_models.py  test_package_rename.py  test_paths.py  test_replication_subscriber.py  test_save_coverage.py  test_store_errors.py  test_store_single.py  test_supersede.py  test_tls.py  test_visibility_migration.py  test_visibility_write.py  test_zenohd_install.py
