[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kioku-mesh"
version = "0.7.0"
description = "Cross-agent distributed memory over a mesh transport (currently Zenoh)"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "h-wata" },
]
keywords = ["mesh", "distributed-memory", "zenoh", "mcp", "agent", "memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=41.0",
    "eclipse-zenoh>=1.9.0",
    "fastmcp>=0.1.0",
    "platformdirs>=4.0",
]

[project.urls]
Homepage = "https://github.com/h-wata/kioku-mesh"
Repository = "https://github.com/h-wata/kioku-mesh"
Issues = "https://github.com/h-wata/kioku-mesh/issues"
Changelog = "https://github.com/h-wata/kioku-mesh/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
]
test = [
    "fastmcp>=0.2",
    "PyYAML>=6.0",
    "pytest-xdist>=3.0",
]
completion = [
    "argcomplete>=3.0",
]

[project.scripts]
kioku-mesh = "kioku_mesh.__main__:main"
kioku-mesh-mcp = "kioku_mesh.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kioku_mesh", "src/mesh_mem"]

[tool.hatch.build.targets.sdist]
include = ["src/kioku_mesh", "src/mesh_mem", "tests", "config", "docs", "scripts", "README.md"]

# Style: 親の ~/work/.github/pyproject.toml をベースに、本プロジェクトで CPY (copyright) を除外。
# 他は google style / 119 桁 / single quotes / LF で揃える。
[tool.isort]
profile = "google"
line_length = 119

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["A", "ANN", "C4", "E", "F", "N", "Q", "W", "D", "D401", "SLF"]
ignore = [
    "ANN002",
    "ANN003",
    "ANN1",
    "ANN401",  # Generic decorator wrappers legitimately use Any.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
    "D404",
    "N818",  # QueryErrorReply keeps its name by design (exception-as-marker).
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately reach into module-private helpers and mock internals.
"tests/**" = ["SLF001"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
# src/ layout: editable install なしでも `pytest` から import できるようにする。
pythonpath = ["src"]
timeout = 60
